# video-summarizer-plugin

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  bootstrap.sh  logger.py  pyproject.toml  server.py  test_pipeline.py
.claude-plugin/: marketplace.json  plugin.json
downloader/: CLAUDE.md  __init__.py  download.py
skills/summarize-video/: SKILL.md
skills/transcribe-video/: SKILL.md
transcriber/: CLAUDE.md  __init__.py  gemini_transcribe.py  transcribe.py
